--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "date-fns": "^2.30.0",
     "react": "^18.2.0",
+    "react-calendar": "^4.6.1",
+    "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
   },
