--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "date-fns": "^2.30.0",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
+    "react-click-away-listener": "^2.2.3",
     "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.16.0"
