--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "date-fns": "^2.30.0",
+    "mathjs": "^12.2.1",
     "react": "^18.2.0",
     "react-calendar": "^4.6.1",
     "react-click-away-listener": "^2.2.3",
