--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vercel/analytics": "^1.1.2",
     "date-fns": "^2.30.0",
     "mathjs": "^12.2.1",
     "react": "^18.2.0",
@@ -17,6 +18,7 @@
     "react-click-away-listener": "^2.2.3",
     "react-datepicker": "^4.20.0",
     "react-dom": "^18.2.0",
+    "react-push-notification": "^1.5.4",
     "react-router-dom": "^6.16.0",
     "react-use-websocket": "^4.5.0"
   },
