--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "express": "^4.19.2",
     "firebase": "^10.11.0",
     "flowbite": "^2.3.0",
+    "javascript-time-ago": "^2.5.10",
+    "ldrs": "^1.0.2",
     "mathjs": "^12.2.1",
     "puppeteer": "^22.13.1",
     "react": "^18.2.0",
